--- a/style.css
+++ b/style.css
@@ -540,8 +540,17 @@ video {
 .start-1{
   inset-inline-start: 0.25rem;
 }
+.top-0{
+  top: 0px;
+}
 .top-\[88px\]{
   top: 88px;
+}
+.top-5{
+  top: 1.25rem;
+}
+.right-5{
+  right: 1.25rem;
 }
 .isolate{
   isolation: isolate;
@@ -554,6 +563,9 @@ video {
 }
 .z-10{
   z-index: 10;
+}
+.z-50{
+  z-index: 50;
 }
 .z-\[1\]{
   z-index: 1;
@@ -594,25 +606,17 @@ video {
 .m-1{
   margin: 0.25rem;
 }
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-.mx-32{
-  margin-left: 8rem;
-  margin-right: 8rem;
-}
-.mx-36{
-  margin-left: 9rem;
-  margin-right: 9rem;
-}
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .mx-6{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 .mb-1{
   margin-bottom: 0.25rem;
@@ -656,11 +660,11 @@ video {
 .mt-2{
   margin-top: 0.5rem;
 }
-.mt-24{
-  margin-top: 6rem;
-}
 .mt-3{
   margin-top: 0.75rem;
+}
+.mt-4{
+  margin-top: 1rem;
 }
 .mt-5{
   margin-top: 1.25rem;
@@ -671,26 +675,11 @@ video {
 .mt-8{
   margin-top: 2rem;
 }
-.mt-\[-840px\]{
-  margin-top: -840px;
-}
-.mt-\[648px\]{
-  margin-top: 648px;
-}
-.mt-\[-1280px\]{
-  margin-top: -1280px;
-}
 .mt-\[-400px\]{
   margin-top: -400px;
 }
-.mt-\[840px\]{
-  margin-top: 840px;
-}
-.mt-4{
-  margin-top: 1rem;
-}
-.ml-4{
-  margin-left: 1rem;
+.mt-\[648px\]{
+  margin-top: 648px;
 }
 .box-border{
   box-sizing: border-box;
@@ -770,6 +759,12 @@ video {
 .hidden{
   display: none;
 }
+.aspect-video{
+  aspect-ratio: 16 / 9;
+}
+.aspect-square{
+  aspect-ratio: 1 / 1;
+}
 .h-1{
   height: 0.25rem;
 }
@@ -794,11 +789,11 @@ video {
 .h-\[400px\]{
   height: 400px;
 }
-.h-\[420px\]{
-  height: 420px;
-}
 .h-\[560px\]{
   height: 560px;
+}
+.h-\[600px\]{
+  height: 600px;
 }
 .h-\[720px\]{
   height: 720px;
@@ -809,8 +804,12 @@ video {
 .h-full{
   height: 100%;
 }
-.h-20{
-  height: 5rem;
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.max-h-\[90vh\]{
+  max-height: 90vh;
 }
 .w-1\/2{
   width: 50%;
@@ -833,14 +832,39 @@ video {
 .w-8{
   width: 2rem;
 }
-.w-\[170px\]{
-  width: 170px;
-}
 .w-\[220px\]{
   width: 220px;
 }
 .w-full{
   width: 100%;
+}
+.w-\[600px\]{
+  width: 600px;
+}
+.w-\[1600px\]{
+  width: 1600px;
+}
+.w-\[1200px\]{
+  width: 1200px;
+}
+.w-\[1000px\]{
+  width: 1000px;
+}
+.w-\[85vw\]{
+  width: 85vw;
+}
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.w-\[81vw\]{
+  width: 81vw;
+}
+.w-52{
+  width: 13rem;
+}
+.w-\[75vw\]{
+  width: 75vw;
 }
 .max-w-3xl{
   max-width: 48rem;
@@ -853,6 +877,9 @@ video {
 }
 .max-w-\[768px\]{
   max-width: 768px;
+}
+.max-w-\[90vw\]{
+  max-width: 90vw;
 }
 .flex-shrink{
   flex-shrink: 1;
@@ -1299,14 +1326,6 @@ video {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
 }
-.gap-x-10{
-  -moz-column-gap: 2.5rem;
-       column-gap: 2.5rem;
-}
-.gap-x-12{
-  -moz-column-gap: 3rem;
-       column-gap: 3rem;
-}
 .gap-x-2{
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -1326,15 +1345,15 @@ video {
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-reverse > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 1;
@@ -1568,6 +1587,12 @@ video {
 .rounded-sm{
   border-radius: 0.125rem;
 }
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+.rounded-lg{
+  border-radius: 0.5rem;
+}
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1595,6 +1620,22 @@ video {
 .rounded-t{
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
+}
+.rounded-l-full{
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+.rounded-r-3xl{
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+.rounded-l-3xl{
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+.rounded-r-full{
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
 }
 .rounded-bl{
   border-bottom-left-radius: 0.25rem;
@@ -1699,6 +1740,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
 }
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-darkbeige{
   --tw-bg-opacity: 1;
   background-color: rgb(220 193 171 / var(--tw-bg-opacity));
@@ -1717,6 +1762,9 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
@@ -1844,11 +1892,26 @@ video {
 .p-1{
   padding: 0.25rem;
 }
+.p-12{
+  padding: 3rem;
+}
 .p-2{
   padding: 0.5rem;
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-8{
+  padding: 2rem;
+}
+.p-3{
+  padding: 0.75rem;
+}
+.p-5{
+  padding: 1.25rem;
+}
+.p-4{
+  padding: 1rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -1870,10 +1933,6 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.px-64{
-  padding-left: 16rem;
-  padding-right: 16rem;
-}
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1881,10 +1940,6 @@ video {
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 .py-2{
   padding-top: 0.5rem;
@@ -1894,19 +1949,12 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.px-36{
-  padding-left: 9rem;
-  padding-right: 9rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pb-1{
   padding-bottom: 0.25rem;
-}
-.pb-12{
-  padding-bottom: 3rem;
 }
 .pb-16{
   padding-bottom: 4rem;
@@ -1937,6 +1985,18 @@ video {
 }
 .pt-6{
   padding-top: 1.5rem;
+}
+.pr-6{
+  padding-right: 1.5rem;
+}
+.pl-3{
+  padding-left: 0.75rem;
+}
+.pr-3{
+  padding-right: 0.75rem;
+}
+.pr-2{
+  padding-right: 0.5rem;
 }
 .text-left{
   text-align: left;
@@ -1990,9 +2050,16 @@ video {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-\[12px\]{
+  font-size: 12px;
 }
 .text-lg{
   font-size: 1.125rem;
@@ -2006,9 +2073,9 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-bold{
   font-weight: 700;
@@ -2581,6 +2648,21 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-zinc-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-zinc-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-10:hover{
   --tw-bg-opacity: 0.1;
 }
@@ -2698,17 +2780,11 @@ video {
   .sm\:mt-16{
     margin-top: 4rem;
   }
-  .sm\:mt-auto{
-    margin-top: auto;
-  }
   .sm\:mt-\[-840px\]{
     margin-top: -840px;
   }
-  .sm\:mt-\[840px\]{
-    margin-top: 840px;
-  }
-  .sm\:mb-\[-840px\]{
-    margin-bottom: -840px;
+  .sm\:mt-auto{
+    margin-top: auto;
   }
   .sm\:block{
     display: block;
@@ -2736,6 +2812,12 @@ video {
   }
   .sm\:w-auto{
     width: auto;
+  }
+  .sm\:w-\[80vw\]{
+    width: 80vw;
+  }
+  .sm\:w-\[78vw\]{
+    width: 78vw;
   }
   .sm\:translate-x-\[-95\%\]{
     --tw-translate-x: -95%;
@@ -2780,6 +2862,12 @@ video {
   .sm\:p-2{
     padding: 0.5rem;
   }
+  .sm\:p-3{
+    padding: 0.75rem;
+  }
+  .sm\:p-8{
+    padding: 2rem;
+  }
   .sm\:px-12{
     padding-left: 3rem;
     padding-right: 3rem;
@@ -2806,9 +2894,19 @@ video {
   .sm\:pt-24{
     padding-top: 6rem;
   }
+  .sm\:pl-3{
+    padding-left: 0.75rem;
+  }
+  .sm\:pr-3{
+    padding-right: 0.75rem;
+  }
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+  .sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
   .sm\:underline{
     text-decoration-line: underline;
@@ -2819,13 +2917,13 @@ video {
   .md\:top-\[95px\]{
     top: 95px;
   }
+  .md\:mx-10{
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
   .md\:mx-12{
     margin-left: 3rem;
     margin-right: 3rem;
-  }
-  .md\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
   }
   .md\:mb-16{
     margin-bottom: 4rem;
@@ -2833,32 +2931,38 @@ video {
   .md\:ml-32{
     margin-left: 8rem;
   }
+  .md\:mt-0{
+    margin-top: 0px;
+  }
   .md\:mt-10{
     margin-top: 2.5rem;
   }
-  .md\:mt-\[815px\]{
-    margin-top: 815px;
+  .md\:mt-12{
+    margin-top: 3rem;
   }
-  .md\:mt-\[-840px\]{
-    margin-top: -840px;
-  }
-  .md\:mt-0{
-    margin-top: 0px;
+  .md\:mt-24{
+    margin-top: 6rem;
   }
   .md\:mt-6{
     margin-top: 1.5rem;
   }
-  .md\:mr-auto{
-    margin-right: auto;
+  .md\:mt-\[815px\]{
+    margin-top: 815px;
   }
   .md\:inline{
     display: inline;
+  }
+  .md\:hidden{
+    display: none;
   }
   .md\:h-20{
     height: 5rem;
   }
   .md\:h-7{
     height: 1.75rem;
+  }
+  .md\:h-\[420px\]{
+    height: 420px;
   }
   .md\:w-20{
     width: 5rem;
@@ -2872,6 +2976,12 @@ video {
   .md\:w-auto{
     width: auto;
   }
+  .md\:w-\[400px\]{
+    width: 400px;
+  }
+  .md\:w-\[75vw\]{
+    width: 75vw;
+  }
   .md\:translate-x-\[-90\%\]{
     --tw-translate-x: -90%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2879,14 +2989,11 @@ video {
   .md\:flex-row{
     flex-direction: row;
   }
-  .md\:flex-col{
-    flex-direction: column;
-  }
   .md\:items-start{
     align-items: flex-start;
   }
-  .md\:justify-center{
-    justify-content: center;
+  .md\:justify-normal{
+    justify-content: normal;
   }
   .md\:justify-between{
     justify-content: space-between;
@@ -2894,8 +3001,22 @@ video {
   .md\:gap-8{
     gap: 2rem;
   }
+  .md\:gap-x-4{
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+  }
+  .md\:gap-y-0{
+    row-gap: 0px;
+  }
   .md\:p-4{
     padding: 1rem;
+  }
+  .md\:p-8{
+    padding: 2rem;
+  }
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
   .md\:px-16{
     padding-left: 4rem;
@@ -2913,6 +3034,10 @@ video {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+  .md\:py-16{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -2920,6 +3045,13 @@ video {
   .md\:py-24{
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+  .md\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .md\:pb-12{
+    padding-bottom: 3rem;
   }
   .md\:pb-32{
     padding-bottom: 8rem;
@@ -2933,12 +3065,22 @@ video {
   .md\:pt-28{
     padding-top: 7rem;
   }
+  .md\:pl-3{
+    padding-left: 0.75rem;
+  }
+  .md\:pr-3{
+    padding-right: 0.75rem;
+  }
   .md\:text-left{
     text-align: left;
   }
   .md\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -2995,6 +3137,9 @@ video {
   .lg\:w-8{
     width: 2rem;
   }
+  .lg\:w-\[600px\]{
+    width: 600px;
+  }
   .lg\:translate-x-\[-80\%\]{
     --tw-translate-x: -80%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -3011,13 +3156,35 @@ video {
   .lg\:gap-10{
     gap: 2.5rem;
   }
+  .lg\:gap-x-10{
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+  .lg\:gap-x-12{
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
   .lg\:space-x-12 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(3rem * var(--tw-space-x-reverse));
     margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
   }
+  .lg\:rounded-l-3xl{
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+  }
+  .lg\:rounded-r-3xl{
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+  }
   .lg\:p-5{
     padding: 1.25rem;
+  }
+  .lg\:p-12{
+    padding: 3rem;
+  }
+  .lg\:p-4{
+    padding: 1rem;
   }
   .lg\:px-16{
     padding-left: 4rem;
@@ -3027,6 +3194,10 @@ video {
     padding-left: 6rem;
     padding-right: 6rem;
   }
+  .lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
   .lg\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -3034,10 +3205,6 @@ video {
   .lg\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-  .lg\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
   }
   .lg\:pb-16{
     padding-bottom: 4rem;
@@ -3051,6 +3218,12 @@ video {
   .lg\:pt-28{
     padding-top: 7rem;
   }
+  .lg\:pl-6{
+    padding-left: 1.5rem;
+  }
+  .lg\:pr-6{
+    padding-right: 1.5rem;
+  }
   .lg\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -3058,6 +3231,10 @@ video {
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
   .lg\:hover\:rotate-3:hover{
     --tw-rotate: 3deg;
@@ -3100,13 +3277,13 @@ video {
     padding-left: 4rem;
     padding-right: 4rem;
   }
-  .xl\:px-64{
-    padding-left: 16rem;
-    padding-right: 16rem;
-  }
   .xl\:px-36{
     padding-left: 9rem;
     padding-right: 9rem;
+  }
+  .xl\:px-48{
+    padding-left: 12rem;
+    padding-right: 12rem;
   }
   .xl\:pl-40{
     padding-left: 10rem;
@@ -3153,6 +3330,10 @@ video {
   .\32xl\:px-24{
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+  .\32xl\:px-64{
+    padding-left: 16rem;
+    padding-right: 16rem;
   }
   .\32xl\:pr-12{
     padding-right: 3rem;
