--- a/style.css
+++ b/style.css
@@ -801,6 +801,12 @@ video {
 .max-h-\[90vh\]{
   max-height: 90vh;
 }
+.min-h-\[540px\]{
+  min-height: 540px;
+}
+.min-h-\[920px\]{
+  min-height: 920px;
+}
 .w-1\/2{
   width: 50%;
 }
@@ -2872,6 +2878,15 @@ video {
   }
   .md\:h-\[420px\]{
     height: 420px;
+  }
+  .md\:min-h-\[1000px\]{
+    min-height: 1000px;
+  }
+  .md\:min-h-\[840px\]{
+    min-height: 840px;
+  }
+  .md\:min-h-\[1440px\]{
+    min-height: 1440px;
   }
   .md\:w-20{
     width: 5rem;
