--- a/style.css
+++ b/style.css
@@ -801,9 +801,6 @@ video {
 .max-h-\[90vh\]{
   max-height: 90vh;
 }
-.min-h-\[540px\]{
-  min-height: 540px;
-}
 .min-h-\[920px\]{
   min-height: 920px;
 }
@@ -1561,6 +1558,12 @@ video {
 .rounded-sm{
   border-radius: 0.125rem;
 }
+.rounded-md{
+  border-radius: 0.375rem;
+}
+.rounded-xl{
+  border-radius: 0.75rem;
+}
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1850,6 +1853,9 @@ video {
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-4{
+  padding: 1rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -2783,6 +2789,9 @@ video {
   .sm\:p-8{
     padding: 2rem;
   }
+  .sm\:p-5{
+    padding: 1.25rem;
+  }
   .sm\:px-12{
     padding-left: 3rem;
     padding-right: 3rem;
@@ -2879,12 +2888,6 @@ video {
   .md\:h-\[420px\]{
     height: 420px;
   }
-  .md\:min-h-\[1000px\]{
-    min-height: 1000px;
-  }
-  .md\:min-h-\[840px\]{
-    min-height: 840px;
-  }
   .md\:min-h-\[1440px\]{
     min-height: 1440px;
   }
@@ -2931,6 +2934,9 @@ video {
   }
   .md\:p-4{
     padding: 1rem;
+  }
+  .md\:p-6{
+    padding: 1.5rem;
   }
   .md\:px-12{
     padding-left: 3rem;
@@ -3097,6 +3103,9 @@ video {
   }
   .lg\:p-5{
     padding: 1.25rem;
+  }
+  .lg\:p-6{
+    padding: 1.5rem;
   }
   .lg\:px-16{
     padding-left: 4rem;
