--- a/style.css
+++ b/style.css
@@ -1555,15 +1555,6 @@ video {
 .rounded-lg{
   border-radius: 0.5rem;
 }
-.rounded-sm{
-  border-radius: 0.125rem;
-}
-.rounded-md{
-  border-radius: 0.375rem;
-}
-.rounded-xl{
-  border-radius: 0.75rem;
-}
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1722,14 +1713,42 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-zinc-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 91 / var(--tw-bg-opacity));
+}
+.bg-zinc-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 113 122 / var(--tw-bg-opacity));
+}
+.bg-zinc-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+.bg-zinc-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
+}
+.bg-opacity-\[0\.80\]{
+  --tw-bg-opacity: 0.80;
 }
 .bg-opacity-\[0\.85\]{
   --tw-bg-opacity: 0.85;
 }
 .bg-opacity-\[0\.9\]{
   --tw-bg-opacity: 0.9;
+}
+.bg-opacity-80{
+  --tw-bg-opacity: 0.8;
+}
+.bg-opacity-90{
+  --tw-bg-opacity: 0.9;
+}
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 .bg-\[url\(\'\/public\/images\/slider_1\.png\'\)\]{
   background-image: url('/public/images/slider_1.png');
@@ -1853,9 +1872,6 @@ video {
 }
 .p-6{
   padding: 1.5rem;
-}
-.p-4{
-  padding: 1rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -2110,6 +2126,10 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-zinc-300{
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -2587,6 +2607,11 @@ video {
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-zinc-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-10:hover{
   --tw-bg-opacity: 0.1;
 }
@@ -2646,6 +2671,11 @@ video {
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-zinc-50:hover{
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
 .hover\:drop-shadow-xl:hover{
@@ -2780,17 +2810,11 @@ video {
   .sm\:bg-none{
     background-image: none;
   }
-  .sm\:p-2{
-    padding: 0.5rem;
-  }
   .sm\:p-3{
     padding: 0.75rem;
   }
   .sm\:p-8{
     padding: 2rem;
-  }
-  .sm\:p-5{
-    padding: 1.25rem;
   }
   .sm\:px-12{
     padding-left: 3rem;
@@ -2935,9 +2959,6 @@ video {
   .md\:p-4{
     padding: 1rem;
   }
-  .md\:p-6{
-    padding: 1.5rem;
-  }
   .md\:px-12{
     padding-left: 3rem;
     padding-right: 3rem;
@@ -3043,9 +3064,6 @@ video {
   .lg\:h-8{
     height: 2rem;
   }
-  .lg\:w-1\/3{
-    width: 33.333333%;
-  }
   .lg\:w-10{
     width: 2.5rem;
   }
@@ -3100,12 +3118,6 @@ video {
   }
   .lg\:p-4{
     padding: 1rem;
-  }
-  .lg\:p-5{
-    padding: 1.25rem;
-  }
-  .lg\:p-6{
-    padding: 1.5rem;
   }
   .lg\:px-16{
     padding-left: 4rem;
