--- a/style.css
+++ b/style.css
@@ -552,6 +552,9 @@ video {
 .top-\[88px\]{
   top: 88px;
 }
+.bottom-5{
+  bottom: 1.25rem;
+}
 .isolate{
   isolation: isolate;
 }
@@ -569,6 +572,9 @@ video {
 }
 .z-\[1\]{
   z-index: 1;
+}
+.z-40{
+  z-index: 40;
 }
 .order-1{
   order: 1;
@@ -798,6 +804,9 @@ video {
 .h-full{
   height: 100%;
 }
+.h-5{
+  height: 1.25rem;
+}
 .max-h-\[90vh\]{
   max-height: 90vh;
 }
@@ -833,6 +842,9 @@ video {
 }
 .w-full{
   width: 100%;
+}
+.w-5{
+  width: 1.25rem;
 }
 .max-w-3xl{
   max-width: 48rem;
@@ -935,6 +947,9 @@ video {
 }
 .cursor-pointer{
   cursor: pointer;
+}
+.cursor-default{
+  cursor: default;
 }
 .touch-auto{
   touch-action: auto;
@@ -1555,6 +1570,9 @@ video {
 .rounded-lg{
   border-radius: 0.5rem;
 }
+.rounded-md{
+  border-radius: 0.375rem;
+}
 .rounded-b{
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1683,6 +1701,18 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(245 240 236 / var(--tw-border-opacity));
 }
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-zinc-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(228 228 231 / var(--tw-border-opacity));
+}
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
 .border-opacity-70{
   --tw-border-opacity: 0.7;
 }
@@ -1728,6 +1758,10 @@ video {
 .bg-zinc-800{
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+.bg-slate-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
@@ -1872,6 +1906,12 @@ video {
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-5{
+  padding: 1.25rem;
+}
+.p-3{
+  padding: 0.75rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -2287,6 +2327,11 @@ video {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2329,6 +2374,10 @@ video {
 }
 .drop-shadow-sm{
   --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-xl{
+  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .grayscale{
@@ -2392,6 +2441,11 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-opacity{
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .delay-500{
   transition-delay: 500ms;
 }
@@ -2406,6 +2460,9 @@ video {
 }
 .duration-\[2000ms\]{
   transition-duration: 2000ms;
+}
+.duration-300{
+  transition-duration: 300ms;
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
@@ -2585,6 +2642,10 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:border-solid:hover{
+  border-style: solid;
+}
+
 .hover\:bg-almostblack:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(17 17 17 / var(--tw-bg-opacity));
@@ -2615,12 +2676,36 @@ video {
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-green-900:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-darkbeige:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 193 171 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-opacity-10:hover{
   --tw-bg-opacity: 0.1;
 }
 
 .hover\:bg-opacity-20:hover{
   --tw-bg-opacity: 0.2;
+}
+
+.hover\:bg-opacity-80:hover{
+  --tw-bg-opacity: 0.8;
 }
 
 .hover\:bg-gradient-to-t:hover{
@@ -2865,6 +2950,9 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:fixed{
+    position: fixed;
+  }
   .md\:top-\[95px\]{
     top: 95px;
   }
@@ -2899,6 +2987,9 @@ video {
   }
   .md\:mt-\[815px\]{
     margin-top: 815px;
+  }
+  .md\:block{
+    display: block;
   }
   .md\:inline{
     display: inline;
@@ -3187,6 +3278,9 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:right-1\/4{
+    right: 25%;
+  }
   .xl\:mx-32{
     margin-left: 8rem;
     margin-right: 8rem;
@@ -3205,6 +3299,9 @@ video {
   }
   .xl\:gap-12{
     gap: 3rem;
+  }
+  .xl\:border-none{
+    border-style: none;
   }
   .xl\:p-8{
     padding: 2rem;
@@ -3237,6 +3334,12 @@ video {
 }
 
 @media (min-width: 1536px){
+  .\32xl\:right-1\/3{
+    right: 33.333333%;
+  }
+  .\32xl\:right-\[480px\]{
+    right: 480px;
+  }
   .\32xl\:h-10{
     height: 2.5rem;
   }
